//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";
import "buf/validate/validate.proto";

service CASCredentialsService {
	rpc Get (CASCredentialsServiceGetRequest) returns (CASCredentialsServiceGetResponse);
}

message CASCredentialsServiceGetRequest {
  Role role = 1 [(buf.validate.field).enum = {in: [1,2]}];
  // during the download we need the digest to find the proper cas backend
  string digest = 2;

  enum Role {
      ROLE_UNSPECIFIED = 0;
      ROLE_DOWNLOADER = 1;
      ROLE_UPLOADER = 2;
  } 
}

message CASCredentialsServiceGetResponse {
  Result result = 1;
  
  message Result {
    string token = 2;
  }
}